Fix for keeping reply form visible after posting

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -858,3 +858,7 @@ nav#object-nav li.bfc-group-name-nav{
     margin-right: 0;
 }
 }
+
+#bbpress-forums .replies-content .bbp-reply-form.bb-modal.bb-modal-box {
+	display: block !important;
+}
